--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.title-container {
+  border-radius: 4px 4px 0px 0px;
+  box-shadow: 0px 4px 1px 1px #97a5a5, 0px 6px 1px 1px #3c4a4a,
+    0px 0px 1px 1px #3c4a4a;
+}
+
+.title {
+  margin: 0;
+  padding: 8px;
+  font-size: 1.1rem;
 }
 
 /* borderを含めた幅で要素の幅が計算されるように */
@@ -14,8 +26,14 @@ body {
   box-sizing: border-box;
 }
 
+.is-hidden {
+  visibility: hidden !important;
+}
+
 .App {
-  max-width: calc(9px * 35 + 1px * 2); /* a. (マスの幅) * 個数 + (ボーダーの幅) * 本数 */
+  max-width: calc(
+    9px * 35 + 1px * 2
+  ); /* a. (マスの幅) * 個数 + (ボーダーの幅) * 本数 */
   text-align: center;
 }
 
@@ -36,6 +54,12 @@ body {
 .field {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 2px;
+  color: white;
+  background: #0f1d1d;
+  border-radius: 0 0 4px 4px;
+  border: 1px solid #ffffff30;
+  box-shadow: 0px 4px 1px 1px #0c1818, 0px 6px 1px 1px #060f0d;
 }
 
 .snake {
@@ -44,4 +68,264 @@ body {
 
 .food {
   background: pink;
+}
+
+.navigation {
+  display: flex;
+  margin-top: 4px;
+  justify-content: space-evenly;
+  color: white;
+  font-weight: bold;
+  background: #020705;
+  box-shadow: 0px 4px 1px 1px #020604, 0px 6px 1px 1px #010403;
+  border: 1px solid #ffffff30;
+}
+
+.navigation-item {
+  padding: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.navigation-item-number-container {
+  display: flex;
+  padding: 0 8px;
+  align-items: center;
+  margin-left: 8px;
+}
+
+.num-board {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #0f1d1d;
+  height: 48px;
+  width: 24px;
+}
+
+.difficulty-number {
+  margin-right: 8px;
+}
+
+.difficulty-button {
+  cursor: pointer;
+  width: 8px;
+  height: 8px;
+  border: 8px solid #0f1d1d;
+  margin: 8px;
+}
+
+.difficulty-button-container {
+  background: #0f1d1d;
+}
+
+.difficulty-up {
+  margin-top: 4px;
+  border-bottom: 8px solid #f0f0f050;
+  transition: all ease 0.5s;
+}
+.difficulty-up:hover {
+  transform: scale(1.1);
+  border-bottom: 8px solid white;
+}
+.difficulty-up:active {
+  transform: scale(0.8);
+  opacity: 0.8;
+}
+
+.difficulty-down {
+  margin-bottom: 4px;
+  border-top: 8px solid #f0f0f050;
+  transition: all ease 0.5s;
+}
+.difficulty-down:hover {
+  transform: scale(1.1);
+  border-top: 8px solid white;
+}
+.difficulty-down:active {
+  transform: scale(0.8);
+  opacity: 0.8;
+}
+
+.btn {
+  border: 0;
+  cursor: pointer;
+  color: white;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: bold;
+  padding: 8px 16px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  transition: all ease .2s;
+}
+
+.btn-init,
+.btn-suspended {
+  box-shadow: 0px 4px 1px 1px #199A4B, 0px 6px 1px 1px #0B5420;
+  background: #23CE6B;
+}
+
+.btn-playing {
+  box-shadow: 0px 4px 1px 1px #D4A752, 0px 6px 1px 1px #956933;
+  background: #FFD166;
+}
+
+.btn-gameover {
+  box-shadow: 0px 4px 1px 1px #CE3959, 0px 6px 1px 1px #8B1C2C;
+  background: #EF476F;
+}
+
+.btn:focus {
+  outline: 0;
+}.btn {
+  border: 0;
+  cursor: pointer;
+  color: white;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: bold;
+  padding: 8px 16px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  transition: all ease .2s;
+}
+
+.btn-init,
+.btn-suspended {
+  box-shadow: 0px 4px 1px 1px #199A4B, 0px 6px 1px 1px #0B5420;
+  background: #23CE6B;
+}
+
+.btn-playing {
+  box-shadow: 0px 4px 1px 1px #D4A752, 0px 6px 1px 1px #956933;
+  background: #FFD166;
+}
+
+.btn-gameover {
+  box-shadow: 0px 4px 1px 1px #CE3959, 0px 6px 1px 1px #8B1C2C;
+  background: #EF476F;
+}
+
+.btn:focus {
+  outline: 0;
+}.btn {
+  border: 0;
+  cursor: pointer;
+  color: white;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: bold;
+  padding: 8px 16px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  transition: all ease .2s;
+}
+
+.btn-init,
+.btn-suspended {
+  box-shadow: 0px 4px 1px 1px #199A4B, 0px 6px 1px 1px #0B5420;
+  background: #23CE6B;
+}
+
+.btn-playing {
+  box-shadow: 0px 4px 1px 1px #D4A752, 0px 6px 1px 1px #956933;
+  background: #FFD166;
+}
+
+.btn-gameover {
+  box-shadow: 0px 4px 1px 1px #CE3959, 0px 6px 1px 1px #8B1C2C;
+  background: #EF476F;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn:active {
+  box-shadow: 0px 0px 0px 0px;
+  transform: translateY(6px);
+}
+
+.btn-init:active,
+.btn-suspended:active {
+  background: #20BD60;
+}
+
+.btn-playing:active {
+  background: #EABC5C;
+}
+
+.btn-gameover:active {
+  background: #DE4064;
+}
+
+.btn {
+  border: 0;
+  cursor: pointer;
+  color: white;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: bold;
+  padding: 8px 16px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  transition: all ease .2s;
+}
+
+.btn-init,
+.btn-suspended {
+  box-shadow: 0px 4px 1px 1px #199A4B, 0px 6px 1px 1px #0B5420;
+  background: #23CE6B;
+}
+
+.btn-playing {
+  box-shadow: 0px 4px 1px 1px #D4A752, 0px 6px 1px 1px #956933;
+  background: #FFD166;
+}
+
+.btn-gameover {
+  box-shadow: 0px 4px 1px 1px #CE3959, 0px 6px 1px 1px #8B1C2C;
+  background: #EF476F;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.manipulation-panel {
+  margin-top: 2px;
+  display: flex;
+  justify-content: center;
+}
+
+.manipulation-btn {
+  min-width: 106px;
+  margin: 4px 2px;
+  background: #52B4E8;
+  box-shadow: 0px 4px 1px 1px #4293C4, 0px 6px 1px 1px #21507B;
+}
+
+.btn-move:active {
+  background: #4293C4;
+}
+
+.btn-left,
+.btn-right
+{
+  min-width: 106px;
+  width: 106px;
+}
+.btn-left {
+  margin-left: 0;
+}
+.btn-right {
+  margin-right: 0;
+}
+
+.btn-up,
+.btn-down
+{
+  margin-left: 0px;
+  margin-right: 0px;
 }
